# Kursovaya1

./: CMakeLists.txt  CPackConfig.cmake  README.md
demo/: main.cpp
include/: Operator.hpp  tarif.hpp
sources/: Operator.cpp  tarif.cpp
